# dadosabertos-scraper

./: .gitignore  README.md  pyproject.toml
src/dadosabertos_scraper/: __init__.py  scrape.py
