[project]
name = "dadosabertos-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pedro Labonia", email = "pedro@xenoumena.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.11.2",
]

[project.scripts]
scrape = "dadosabertos_scraper.scrape:cli_entrypoint"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"


